# ngpb4py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  environment.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  test.yml
docs/: api.md  architecture.md  configuration.md  development.md  getting-started.md  index.html  index.md  installation.md  ngpb4py.html  quickstart.md  reference.md  results.md  running-jobs.md  search.js
examples/exercise1/: 1CCM.pqr  exercise1.py  options.prm
examples/exercise2/: exercise2.py  options.prm
examples/exercise3/: exercise3.py  options.prm
examples/exercise4/: 1CCM_out.pqr  exercise4.py  fine_mesh.prm  focus.prm  rand_center.prm
examples/simple_4LZT/: example.py
path/to/local/repository/: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
path/to/local/repository/.devcontainer/: devcontainer.json
src/ngpb4py/: __init__.py  apptainer.py  config.py  container.py  exceptions.py  inputs.py  ngpb4py.py  parameters.py  parsers.py  provenance.py  result.py  runner.py  setup.py  setup.sh  utils.py  verbose.py
src/ngpb4py/backends/: __init__.py  base.py  container.py
src/ngpb4py/data/: __init__.py
src/ngpb4py/helpers/: download_image.py  run_container.py
src/ngpb4py/io/: __init__.py  logs.py  prm.py
tests/: test_apptainer.py  test_backends.py  test_inputs.py  test_logs.py  test_ngpb.py  test_parsers.py  test_prm.py  test_runner.py  test_setup.py
tests/data/: ex1.prm
(+2 files in other folders)
